--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   hello-world:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: echo "Hello world!"
